--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -24,11 +24,24 @@ jobs:
       - name: install kubectl
         uses: azure/setup-kubectl@v3
 
-      - name: lint chart
-        uses: helm/chart-testing-action@master
+      - uses: actions/setup-python@v4
         with:
-          command: lint
-          config: .github/ct.yaml
+          python-version: '3.9'
+          check-latest: true
+
+      - name: set up chart-testing
+        uses: helm/chart-testing-action@v2.3.1
+
+      - name: run chart-testing (list-changed)
+        id: list-changed
+        run: |
+          changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }})
+          if [[ -n "$changed" ]]; then
+            echo "::set-output name=changed::true"
+          fi
+
+      - name: Run chart-testing (lint)
+        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --validate-maintainer=false
 
   molecule:
 
