--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -32,15 +32,7 @@ jobs:
       - name: set up chart-testing
         uses: helm/chart-testing-action@v2.3.1
 
-      - name: run chart-testing (list-changed)
-        id: list-changed
-        run: |
-          changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }})
-          if [[ -n "$changed" ]]; then
-            echo "::set-output name=changed::true"
-          fi
-
-      - name: Run chart-testing (lint)
+      - name: lint charts
         run: ct lint --target-branch ${{ github.event.repository.default_branch }} --validate-maintainer=false
 
   molecule:
