--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -33,7 +33,7 @@ jobs:
         uses: helm/chart-testing-action@v2.3.1
 
       - name: lint charts
-        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --validate-maintainers=false
+        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --validate-maintainers=false --chart-dirs ./charts --all
 
   molecule:
 
