--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -32,6 +32,9 @@ jobs:
       - name: set up chart-testing
         uses: helm/chart-testing-action@v2.3.1
 
+      - name: debug path
+        run: ls $GITHUB_WORKSPACE
+
       - name: lint charts
         run: ct lint --target-branch ${{ github.event.repository.default_branch }} --validate-maintainers=false --chart-dirs ./charts --all
 
