--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -32,11 +32,8 @@ jobs:
       - name: set up chart-testing
         uses: helm/chart-testing-action@v2.3.1
 
-      - name: debug path
-        run: ls $GITHUB_WORKSPACE
-
       - name: lint charts
-        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --validate-maintainers=false --chart-dirs ./charts --all
+        run: ct lint --chart-dirs $GITHUB_WORKSPACE/charts --all --validate-maintainers=false
 
   molecule:
 
