--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,6 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: release chart
-        uses: helm/chart-releaser-action@master
+        uses: helm/chart-releaser-action@1.5.0
         env:
           CR_TOKEN: '${{ secrets.GH_TOKEN }}'
