--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,11 +8,13 @@ on:
       - master
     paths:
       - 'charts/**'
+      - '.github/workflows/release.yml'
   push:
     branches:
       - master
     paths:
       - 'charts/**'
+      - '.github/workflows/release.yml'
 
 jobs:
 
@@ -29,6 +31,6 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: release chart
-        uses: helm/chart-releaser-action@1.5.0
+        uses: helm/chart-releaser-action@v1.5.0
         env:
           CR_TOKEN: '${{ secrets.GH_TOKEN }}'
