Fix workflow action triggers

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,7 @@
 # See: https://github.com/marketplace/actions/publish-ansible-role-to-galaxy
 # See: https://github.com/ansible/galaxy/issues/46
 
-name: release
+name: docker
 on:
   push:
     tags:
@@ -13,9 +13,9 @@ on:
 
 jobs:
 
-  release:
+  docker:
 
-    name: Release
+    name: publish docker images
     runs-on: ubuntu-latest
 
     steps:
