Fix workflow action triggers

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -4,9 +4,8 @@ name: molecule
 on:
 
   pull_request:
-    paths:
-      - 'charts/**'
-      - '.github/workflows/molecule.yml'
+    branches:
+      - master
   push:
     branches:
       - master
