--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: checkout
         uses: actions/checkout@v1
+        with:
+          fetch-depth: 0
 
       - name: configure git
         run: |
@@ -26,5 +28,7 @@ jobs:
 
       - name: release chart
         uses: helm/chart-releaser-action@v1.5.0
+        with:
+          charts_dir: charts/
         env:
           CR_TOKEN: '${{ secrets.GH_TOKEN }}'
