--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -113,6 +113,7 @@ provisioner:
             metabase:
               admin:
                 email: metabase@nephelai.io
+                password: metabase
               ingress:
                 enabled: true
                 className: nginx-private
