--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: checkout
         uses: actions/checkout@v1
+        with:
+         fetch-depth: 0
 
       - name: configure git
         run: |
