--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,6 +23,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: update package cache
+        run: sudo apt-get update
+
       - name: check out the codebase
         uses: actions/checkout@v2
 
