Refactor helm release query

--- a/molecule/default/create.yml
+++ b/molecule/default/create.yml
@@ -19,19 +19,17 @@
       block:
 
         - name: query helm releases
-          ansible.builtin.uri:
-            url: https://api.github.com/repos/helm/helm/releases/latest
-            headers: "{{ _headers }}"
+          community.general.github_release:
+            user: helm
+            repo: helm
+            token: "{{ _token if _token != '' else omit }}"
           vars:
             _token: "{{ lookup('ansible.builtin.env', 'GH_TOKEN', default='') }}"
-            _header_auth:
-              Authorization: "Bearer {{ _token }}"
-            _headers: "{{ _header_auth if _token != '' else {} }}"
           register: helm_release_query
 
         - name: set kind release target
           ansible.builtin.set_fact:
-            helm_release: "{{ helm_release_query.json.tag_name }}"
+            helm_release: "{{ helm_release_query.tag }}"
 
       when: helm_release is not defined
 
