Fix hook script syntax

--- a/charts/dataplane/templates/metabase/hook.yaml
+++ b/charts/dataplane/templates/metabase/hook.yaml
@@ -144,8 +144,9 @@ spec:
                 http://{{ $svcName }}:{{ $svcPort }}/api/session | jq '.id' -r);
               echo "[$(date -Iseconds)] [INFO] [metabase-setup] query sample metabase db";
               db_sample_retries=6;
-              db_sample="null"
+              db_sample="null";
               while [[ "$db_sample" == "null" && "$db_sample_retries" > 0 ]]; do
+                db_sample_retries=$(( db_sample_retries - 1 ))
                 sleep 30;
                 db_sample=$(curl -s -X GET \
                   -H "Accept: application/json" \
@@ -154,7 +155,6 @@ spec:
                   -H "X-Metabase-Session: $token" \
                   http://{{ $svcName }}:{{ $svcPort }}/api/database |
                   jq ".data | map(select(.name == \"Sample Database\")) | .[0].id" -r);
-                db_sample_retries=$(( db_sample_retries - 1 ))
               done;
               if [[ "$db_sample" != "null" ]]; then
                 echo "[$(date -Iseconds)] [INFO] [metabase-setup] delete sample metabase db";
