Ignore sample db check errors (#26)
* Ignore sample db check errors

* Add password complexity parameter

* Add k8s v1.25.8 to test targets

--- a/charts/dataplane/templates/metabase/hook.yaml
+++ b/charts/dataplane/templates/metabase/hook.yaml
@@ -58,7 +58,7 @@ spec:
             - "sh"
             - "-c"
             - >-
-              set -e
+              set -ex
               echo "[$(date -Iseconds)] [INFO] [metabase-setup] waiting for metabase service";
               until \
                 curl -s \
@@ -148,7 +148,8 @@ spec:
                 -H "X-Forwarded-Host: $MB_SITE_URL" \
                 -H "X-Forwarded-Proto: $MB_SITE_PROTO" \
                 -H "X-Metabase-Session: $token" \
-                http://{{ $svcName }}:{{ $svcPort }}/api/database | jq ".data | map(select(.name == \"Sample Database\")) | .[0].id" -r);
+                http://{{ $svcName }}:{{ $svcPort }}/api/database |
+                jq ".data | map(select(.name == \"Sample Database\")) | .[0].id" -r);
               if [[ "$db_sample" != "null" ]]; then
                 echo "[$(date -Iseconds)] [INFO] [metabase-setup] delete sample metabase db";
                 echo "$db_sample" | xargs -I{} \
